@@ -1,12 +1,17 @@
 package JGS.CasperEvent.domain.event.service.adminService;
 
-import JGS.CasperEvent.domain.event.dto.RequestDto.AdminRequestDto;
-import JGS.CasperEvent.domain.event.dto.RequestDto.lotteryEventDto.LotteryEventRequestDto;
-import JGS.CasperEvent.domain.event.dto.RequestDto.rushEventDto.RushEventOptionRequestDto;
-import JGS.CasperEvent.domain.event.dto.RequestDto.rushEventDto.RushEventRequestDto;
-import JGS.CasperEvent.domain.event.dto.ResponseDto.ImageUrlResponseDto;
-import JGS.CasperEvent.domain.event.dto.ResponseDto.lotteryEventResponseDto.*;
-import JGS.CasperEvent.domain.event.dto.ResponseDto.rushEventResponseDto.*;
+import JGS.CasperEvent.domain.event.dto.request.AdminRequestDto;
+import JGS.CasperEvent.domain.event.dto.request.lotteryEventDto.LotteryEventRequestDto;
+import JGS.CasperEvent.domain.event.dto.request.rushEventDto.RushEventOptionRequestDto;
+import JGS.CasperEvent.domain.event.dto.request.rushEventDto.RushEventRequestDto;
+import JGS.CasperEvent.domain.event.dto.response.ImageUrlResponseDto;
+import JGS.CasperEvent.domain.event.dto.response.ParticipantsListResponseDto;
+import JGS.CasperEvent.domain.event.dto.response.lottery.CasperBotResponseDto;
+import JGS.CasperEvent.domain.event.dto.response.lottery.ExpectationsPagingResponseDto;
+import JGS.CasperEvent.domain.event.dto.response.lottery.LotteryEventParticipantResponseDto;
+import JGS.CasperEvent.domain.event.dto.response.lottery.LotteryEventResponseDto;
+import JGS.CasperEvent.domain.event.dto.response.rush.RushEventParticipantResponseDto;
+import JGS.CasperEvent.domain.event.dto.response.rush.RushEventResponseDto;
 import JGS.CasperEvent.domain.event.entity.admin.Admin;
 import JGS.CasperEvent.domain.event.entity.casperBot.CasperBot;
 import JGS.CasperEvent.domain.event.entity.event.LotteryEvent;
@@ -23,12 +28,11 @@ import JGS.CasperEvent.domain.event.repository.eventRepository.RushOptionReposit
 import JGS.CasperEvent.domain.event.repository.participantsRepository.LotteryParticipantsRepository;
 import JGS.CasperEvent.domain.event.repository.participantsRepository.LotteryWinnerRepository;
 import JGS.CasperEvent.domain.event.repository.participantsRepository.RushParticipantsRepository;
+import JGS.CasperEvent.domain.event.service.eventService.EventCacheService;
 import JGS.CasperEvent.global.enums.CustomErrorCode;
 import JGS.CasperEvent.global.enums.Position;
 import JGS.CasperEvent.global.enums.Role;
 import JGS.CasperEvent.global.error.exception.CustomException;
-import JGS.CasperEvent.global.error.exception.TooManyLotteryEventException;
-import JGS.CasperEvent.global.error.exception.TooManyRushEventException;
 import JGS.CasperEvent.global.response.ResponseDto;
 import JGS.CasperEvent.global.service.S3Service;
 import lombok.RequiredArgsConstructor;
@@ -43,7 +47,6 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static JGS.CasperEvent.global.util.RepositoryErrorHandler.findByIdOrElseThrow;
 
@@ -61,30 +64,35 @@ public class AdminService {
     private final CasperBotRepository casperBotRepository;
     private final LotteryWinnerRepository lotteryWinnerRepository;
     private final RedisTemplate<String, CasperBotResponseDto> casperBotRedisTemplate;
+    private final EventCacheService eventCacheService;
+    private final Random random = new Random();
 
+    // 어드민 인증
     public Admin verifyAdmin(AdminRequestDto adminRequestDto) {
-        return adminRepository.findByIdAndPassword(adminRequestDto.getAdminId(), adminRequestDto.getPassword()).orElseThrow(NoSuchElementException::new);
+        return adminRepository.findByPhoneNumberAndPassword(adminRequestDto.getAdminId(), adminRequestDto.getPassword()).orElseThrow(NoSuchElementException::new);
     }
 
+    // 어드민 생성
     public ResponseDto postAdmin(AdminRequestDto adminRequestDto) {
         String adminId = adminRequestDto.getAdminId();
-        //Todo: 비밀번호 암호화 필요
         String password = adminRequestDto.getPassword();
 
-        Admin admin = adminRepository.findById(adminId).orElse(null);
+        Admin admin = adminRepository.findByPhoneNumber(adminId).orElse(null);
 
         if (admin != null) throw new CustomException("이미 등록된 ID입니다.", CustomErrorCode.CONFLICT);
         adminRepository.save(new Admin(adminId, password, Role.ADMIN));
 
-        return ResponseDto.of("관리자 생성 성공");
+        return new ResponseDto("관리자 생성 성공");
     }
 
+    // 이미지 업로드
     public ImageUrlResponseDto postImage(MultipartFile image) {
         return new ImageUrlResponseDto(s3Service.upload(image));
     }
 
+    // 추첨 이벤트 생성
     public LotteryEventResponseDto createLotteryEvent(LotteryEventRequestDto lotteryEventRequestDto) {
-        if (lotteryEventRepository.count() >= 1) throw new TooManyLotteryEventException();
+        if (lotteryEventRepository.count() >= 1) throw new CustomException(CustomErrorCode.TOO_MANY_LOTTERY_EVENT);
 
         LotteryEvent lotteryEvent = lotteryEventRepository.save(new LotteryEvent(
                 LocalDateTime.of(lotteryEventRequestDto.getStartDate(), lotteryEventRequestDto.getStartTime()),
@@ -92,16 +100,18 @@ public class AdminService {
                 lotteryEventRequestDto.getWinnerCount()
         ));
 
+        eventCacheService.setLotteryEvent();
         return LotteryEventResponseDto.of(lotteryEvent, LocalDateTime.now());
     }
 
-    public LotteryEventDetailResponseDto getLotteryEvent() {
-        return LotteryEventDetailResponseDto.of(
-                getCurrentLotteryEvent()
-        );
+    // 추첨 이벤트 조회
+    public LotteryEventResponseDto getLotteryEvent() {
+        long appliedCount = lotteryParticipantsRepository.count();
+        return LotteryEventResponseDto.withDetail(getCurrentLotteryEvent(), appliedCount);
     }
 
-    public LotteryEventParticipantsListResponseDto getLotteryEventParticipants(int size, int page, String phoneNumber) {
+    // 추첨 이벤트 참여자 조회
+    public ParticipantsListResponseDto<LotteryEventParticipantResponseDto> getLotteryEventParticipants(int size, int page, String phoneNumber) {
         Pageable pageable = PageRequest.of(page, size);
 
         Page<LotteryParticipants> lotteryParticipantsPage = null;
@@ -114,25 +124,24 @@ public class AdminService {
             count = lotteryParticipantsRepository.countByBaseUser_Id(phoneNumber);
         }
 
-        List<LotteryEventParticipantsResponseDto> lotteryEventParticipantsResponseDtoList = new ArrayList<>();
+        List<LotteryEventParticipantResponseDto> lotteryEventParticipantsResponseDtoList = new ArrayList<>();
 
         for (LotteryParticipants lotteryParticipant : lotteryParticipantsPage) {
             lotteryEventParticipantsResponseDtoList.add(
-                    LotteryEventParticipantsResponseDto.of(lotteryParticipant)
+                    LotteryEventParticipantResponseDto.withDetail(lotteryParticipant)
             );
         }
         Boolean isLastPage = !lotteryParticipantsPage.hasNext();
-        return new LotteryEventParticipantsListResponseDto(lotteryEventParticipantsResponseDtoList, isLastPage, count);
+        return new ParticipantsListResponseDto<>(lotteryEventParticipantsResponseDtoList, isLastPage, count);
     }
 
-    public AdminRushEventResponseDto createRushEvent(RushEventRequestDto rushEventRequestDto, MultipartFile prizeImg, MultipartFile leftOptionImg, MultipartFile rightOptionImg) {
-        if (rushEventRepository.count() >= 6) throw new TooManyRushEventException();
-
+    // 선착순 이벤트 생성
+    public RushEventResponseDto createRushEvent(RushEventRequestDto rushEventRequestDto, MultipartFile prizeImg, MultipartFile leftOptionImg, MultipartFile rightOptionImg) {
+        if (rushEventRepository.count() >= 6) throw new CustomException(CustomErrorCode.TOO_MANY_RUSH_EVENT);
         String prizeImgSrc = s3Service.upload(prizeImg);
         String leftOptionImgSrc = s3Service.upload(leftOptionImg);
         String rightOptionImgSrc = s3Service.upload(rightOptionImg);
 
-        // Img s3 저장
         RushEvent rushEvent = rushEventRepository.save(
                 new RushEvent(
                         LocalDateTime.of(rushEventRequestDto.getEventDate(), rushEventRequestDto.getStartTime()),
@@ -145,41 +154,40 @@ public class AdminService {
         RushEventOptionRequestDto leftOption = rushEventRequestDto.getLeftOptionRequestDto();
         RushEventOptionRequestDto rightOption = rushEventRequestDto.getRightOptionRequestDto();
 
-        RushOption leftRushOption = rushOptionRepository.save(new RushOption(
-                rushEvent,
-                leftOption.getMainText(),
-                leftOption.getSubText(),
-                leftOption.getResultMainText(),
-                leftOption.getResultSubText(),
-                leftOptionImgSrc,
-                Position.LEFT
-        ));
-
-        RushOption rightRushOption = rushOptionRepository.save(new RushOption(
-                rushEvent,
-                rightOption.getMainText(),
-                rightOption.getSubText(),
-                rightOption.getResultMainText(),
-                rightOption.getResultSubText(),
-                rightOptionImgSrc,
-                Position.RIGHT
-        ));
+        RushOption leftRushOption = createAndSaveRushOption(rushEvent, leftOption, leftOptionImgSrc, Position.LEFT);
+        RushOption rightRushOption = createAndSaveRushOption(rushEvent, rightOption, rightOptionImgSrc, Position.RIGHT);
 
         rushEvent.addOption(leftRushOption, rightRushOption);
-
-        return AdminRushEventResponseDto.of(rushEvent);
+        return RushEventResponseDto.withDetail(rushEvent);
     }
 
-    public List<AdminRushEventResponseDto> getRushEvents() {
+    public RushOption createAndSaveRushOption(RushEvent rushEvent, RushEventOptionRequestDto optionDto, String imgSrc, Position position) {
+
+        RushOption rushOption = new RushOption(
+                rushEvent,
+                optionDto.getMainText(),
+                optionDto.getSubText(),
+                optionDto.getResultMainText(),
+                optionDto.getResultSubText(),
+                imgSrc,
+                position
+        );
+
+        return rushOptionRepository.save(rushOption);
+    }
+
+    // 선착순 이벤트 조회
+    public List<RushEventResponseDto> getRushEvents() {
         List<RushEvent> rushEvents = rushEventRepository.findAll();
-        List<AdminRushEventResponseDto> rushEventResponseDtoList = new ArrayList<>();
+        List<RushEventResponseDto> rushEventResponseDtoList = new ArrayList<>();
         for (RushEvent rushEvent : rushEvents) {
-            rushEventResponseDtoList.add(AdminRushEventResponseDto.of(rushEvent));
+            rushEventResponseDtoList.add(RushEventResponseDto.withDetail(rushEvent));
         }
         return rushEventResponseDtoList;
     }
 
-    public RushEventParticipantsListResponseDto getRushEventParticipants(long rushEventId, int size, int page, int optionId, String phoneNumber) {
+    // 선착순 이벤트 참여자 조회
+    public ParticipantsListResponseDto<RushEventParticipantResponseDto> getRushEventParticipants(long rushEventId, int size, int page, int optionId, String phoneNumber) {
         Pageable pageable = PageRequest.of(page, size);
 
         Page<RushParticipants> rushParticipantsPage = null;
@@ -209,19 +217,20 @@ public class AdminService {
 
         List<RushEventParticipantResponseDto> rushEventParticipantResponseDtoList = new ArrayList<>();
         for (RushParticipants rushParticipant : rushParticipantsPage) {
-            String userId = rushParticipant.getBaseUser().getId();
+            String userId = rushParticipant.getBaseUser().getPhoneNumber();
             int userChoice = rushParticipant.getOptionId();
             long rank = rushParticipantsRepository.findUserRankByEventIdAndUserIdAndOptionId(rushEventId, userId, userChoice);
             rushEventParticipantResponseDtoList.add(
-                    RushEventParticipantResponseDto.of(rushParticipant, rank)
+                    RushEventParticipantResponseDto.result(rushParticipant, rank)
             );
         }
 
         Boolean isLastPage = !rushParticipantsPage.hasNext();
-        return new RushEventParticipantsListResponseDto(rushEventParticipantResponseDtoList, isLastPage, count);
+        return new ParticipantsListResponseDto<>(rushEventParticipantResponseDtoList, isLastPage, count);
     }
 
-    public RushEventParticipantsListResponseDto getRushEventWinners(long rushEventId, int size, int page, String phoneNumber) {
+    // 선착순 이벤트 당첨자 조회
+    public ParticipantsListResponseDto<RushEventParticipantResponseDto> getRushEventWinners(long rushEventId, int size, int page, String phoneNumber) {
         Page<RushParticipants> rushParticipantsPage = null;
 
         RushEvent rushEvent = findByIdOrElseThrow(rushEventRepository, rushEventId, CustomErrorCode.NO_RUSH_EVENT);
@@ -234,6 +243,7 @@ public class AdminService {
         boolean isPhoneNumberEmpty = phoneNumber.isEmpty();
 
         int winnerOptionId;
+
         if (leftSelect > rightSelect) winnerOptionId = 1;
         else if (leftSelect < rightSelect) winnerOptionId = 2;
         else winnerOptionId = 0;
@@ -257,27 +267,29 @@ public class AdminService {
 
         List<RushEventParticipantResponseDto> rushEventParticipantResponseDtoList = new ArrayList<>();
         for (RushParticipants rushParticipant : rushParticipantsPage) {
-            String userId = rushParticipant.getBaseUser().getId();
+            String userId = rushParticipant.getBaseUser().getPhoneNumber();
             int userChoice = rushParticipant.getOptionId();
             long rank = rushParticipantsRepository.findUserRankByEventIdAndUserIdAndOptionId(rushEventId, userId, userChoice);
             rushEventParticipantResponseDtoList.add(
-                    RushEventParticipantResponseDto.of(rushParticipant, rank)
+                    RushEventParticipantResponseDto.result(rushParticipant, rank)
             );
         }
 
         Boolean isLastPage = !rushParticipantsPage.hasNext();
         long totalParticipants = rushParticipantsList.size();
-        return new RushEventParticipantsListResponseDto(rushEventParticipantResponseDtoList, isLastPage, totalParticipants);
+        return new ParticipantsListResponseDto<>(rushEventParticipantResponseDtoList, isLastPage, totalParticipants);
     }
 
+    // 선착순 이벤트 삭제
     @Transactional
     public void deleteLotteryEvent() {
         LotteryEvent currentLotteryEvent = getCurrentLotteryEvent();
         lotteryEventRepository.deleteById(currentLotteryEvent.getLotteryEventId());
     }
 
+    // 추첨 이벤트 업데이트
     @Transactional
-    public LotteryEventDetailResponseDto updateLotteryEvent(LotteryEventRequestDto lotteryEventRequestDto) {
+    public LotteryEventResponseDto updateLotteryEvent(LotteryEventRequestDto lotteryEventRequestDto) {
         LotteryEvent currentLotteryEvent = getCurrentLotteryEvent();
 
         LocalDateTime now = LocalDateTime.now();
@@ -306,10 +318,12 @@ public class AdminService {
 
         // 필드 업데이트
         currentLotteryEvent.updateLotteryEvent(newStartDateTime, newEndDateTime, lotteryEventRequestDto.getWinnerCount());
-
-        return LotteryEventDetailResponseDto.of(currentLotteryEvent);
+        eventCacheService.setLotteryEvent();
+        Long appliedCount = lotteryParticipantsRepository.count();
+        return LotteryEventResponseDto.withDetail(currentLotteryEvent, appliedCount);
     }
 
+    // 추첨 이벤트 조회
     private LotteryEvent getCurrentLotteryEvent() {
         List<LotteryEvent> lotteryEventList = lotteryEventRepository.findAll();
 
@@ -324,6 +338,7 @@ public class AdminService {
         return lotteryEventList.get(0);
     }
 
+    // 추첨 이벤트 당첨자 추첨
     @Transactional
     public ResponseDto pickLotteryEventWinners() {
         if (lotteryWinnerRepository.count() > 1) throw new CustomException(CustomErrorCode.LOTTERY_EVENT_ALREADY_DRAWN);
@@ -331,43 +346,65 @@ public class AdminService {
 
         int winnerCount = lotteryEvent.getWinnerCount();
 
-        List<LotteryParticipants> lotteryParticipants = lotteryParticipantsRepository.findAll();
-        Set<LotteryParticipants> lotteryEventWinners = new HashSet<>();
+        List<Object[]> lotteryParticipants = lotteryParticipantsRepository.findIdAndAppliedCounts();
 
-        int totalWeight;
-        Random random = new Random();
+        if (winnerCount >= lotteryParticipants.size()) {
+            Long winnerId;
+            for (Object[] lotteryParticipant : lotteryParticipants) {
+                winnerId = (Long) lotteryParticipant[0];
+                lotteryWinnerRepository.save(new LotteryWinners(
+                        lotteryParticipantsRepository.findById(winnerId).orElseThrow(
+                                () -> new CustomException(CustomErrorCode.USER_NOT_FOUND)
+                        )
+                ));
+
+            }
+            return new ResponseDto("추첨이 완료되었습니다.");
+        }
+
+        int appliedCount;
+        List<Long> appliedParticipants = new ArrayList<>();
+
+        for (Object[] lotteryParticipant : lotteryParticipants) {
+            appliedCount = (int) lotteryParticipant[1];
+            for (int i = 0; i < appliedCount; i++) {
+                appliedParticipants.add((long) lotteryParticipant[0]);
+            }
+        }
+
+        // Fisher-Yates Shuffle Algorithm
+        for (int i = appliedParticipants.size() - 1; i > 0; i--) {
+            int j = random.nextInt(i + 1);
+            Long temp = appliedParticipants.get(i);
+            appliedParticipants.set(i, appliedParticipants.get(j));
+            appliedParticipants.set(j, temp);
+        }
+
+        Set<Long> lotteryEventWinners = new HashSet<>();
         while (lotteryEventWinners.size() < winnerCount) {
-            totalWeight = 0;
-            for (LotteryParticipants lotteryParticipant : lotteryParticipants) {
-                totalWeight += lotteryParticipant.getAppliedCount();
-            }
-
-            int randomValue = random.nextInt(totalWeight) + 1;
-
-            int cumulativeSum = 0;
-            for (LotteryParticipants lotteryParticipant : lotteryParticipants) {
-                cumulativeSum += lotteryParticipant.getAppliedCount();
-                if(randomValue <= cumulativeSum){
-                    lotteryEventWinners.add(lotteryParticipant);
-                    lotteryParticipants.remove(lotteryParticipant);
-                    break;
-                }
-            }
+            Long winnerId = appliedParticipants.remove(0);
+            if (lotteryEventWinners.contains(winnerId)) continue;
+            lotteryEventWinners.add(winnerId);
         }
 
-        for (LotteryParticipants lotteryEventWinner : lotteryEventWinners) {
-            lotteryWinnerRepository.save(new LotteryWinners(lotteryEventWinner));
-        }
+        List<LotteryWinners> winnersToSave = lotteryEventWinners.stream()
+                .map(winnerId -> new LotteryWinners(lotteryParticipantsRepository.findById(winnerId).orElseThrow(() ->
+                        new CustomException(CustomErrorCode.USER_NOT_FOUND)
+                ))).toList();
+
+        lotteryWinnerRepository.saveAll(winnersToSave);
 
         return new ResponseDto("추첨이 완료되었습니다.");
     }
 
-    public ResponseDto deleteLotteryEventWinners(){
+    // 당첨자 명단 삭제
+    public ResponseDto deleteLotteryEventWinners() {
         lotteryWinnerRepository.deleteAll();
         return new ResponseDto("당첨자 명단을 삭제했습니다.");
     }
 
-    public LotteryEventWinnerListResponseDto getLotteryEventWinners(int size, int page, String phoneNumber) {
+    // 추첨 이벤트 당첨자 명단 조회
+    public ParticipantsListResponseDto<LotteryEventParticipantResponseDto> getLotteryEventWinners(int size, int page, String phoneNumber) {
         Pageable pageable = PageRequest.of(page, size);
         if (lotteryWinnerRepository.count() == 0) throw new CustomException(CustomErrorCode.LOTTERY_EVENT_NOT_DRAWN);
 
@@ -381,66 +418,93 @@ public class AdminService {
             count = lotteryWinnerRepository.countByPhoneNumber(phoneNumber);
         }
 
-        List<LotteryEventWinnerResponseDto> lotteryEventWinnerResponseDto = new ArrayList<>();
+        List<LotteryEventParticipantResponseDto> lotteryEventWinnerResponseDto = new ArrayList<>();
 
         for (LotteryWinners lotteryWinners : lotteryWinnersPage) {
             lotteryEventWinnerResponseDto.add(
-                    LotteryEventWinnerResponseDto.of(lotteryWinners)
+                    LotteryEventParticipantResponseDto.winner(lotteryWinners)
             );
         }
         Boolean isLastPage = !lotteryWinnersPage.hasNext();
-        return new LotteryEventWinnerListResponseDto(lotteryEventWinnerResponseDto, isLastPage, count);
+        return new ParticipantsListResponseDto<>(lotteryEventWinnerResponseDto, isLastPage, count);
     }
 
+    // 선착순 이벤트 업데이트
     @Transactional
-    public List<AdminRushEventResponseDto> updateRushEvents(List<RushEventRequestDto> rushEventRequestDtoList) {
+    public List<RushEventResponseDto> updateRushEvents(List<RushEventRequestDto> rushEventRequestDtoList) {
         LocalDateTime now = LocalDateTime.now();
 
         for (RushEventRequestDto rushEventRequestDto : rushEventRequestDtoList) {
             RushEvent rushEvent = rushEventRepository.findByRushEventId(rushEventRequestDto.getRushEventId());
-
-            LocalDateTime curStartDateTime = rushEvent.getStartDateTime();
-            LocalDateTime curEndDateTime = rushEvent.getEndDateTime();
             LocalDateTime startDateTime = LocalDateTime.of(rushEventRequestDto.getEventDate(), rushEventRequestDto.getStartTime());
             LocalDateTime endDateTime = LocalDateTime.of(rushEventRequestDto.getEventDate(), rushEventRequestDto.getEndTime());
-            if (!Objects.equals(curStartDateTime, startDateTime) || !Objects.equals(curEndDateTime, endDateTime)) {
-                // 종료 날짜가 시작 날짜보다 뒤인지 체크
-                if (endDateTime.isBefore(startDateTime)) {
-                    throw new CustomException(CustomErrorCode.EVENT_END_TIME_BEFORE_START_TIME);
-                }
 
-                if (curStartDateTime.isBefore(now) && curEndDateTime.isAfter(now)) {
-                    // 현재 진행 중인 이벤트인 경우
-                    if (!curStartDateTime.equals(startDateTime)) {
-                        throw new CustomException(CustomErrorCode.EVENT_IN_PROGRESS_CANNOT_CHANGE_START_TIME);
-                    }
-                    if (endDateTime.isBefore(now)) {
-                        throw new CustomException(CustomErrorCode.EVENT_IN_PROGRESS_END_TIME_BEFORE_NOW);
-                    }
-                }
-
-                // 이벤트가 시작 전인 경우
-                else if (startDateTime.isBefore(now)) {
-                    throw new CustomException(CustomErrorCode.EVENT_BEFORE_START_TIME);
-                }
-            }
-
-            RushOption leftOption = rushEvent.getLeftOption();
-            RushOption rightOption = rushEvent.getRightOption();
-
-            rushEvent.updateRushEvent(rushEventRequestDto);
-            leftOption.updateRushOption(rushEventRequestDto.getLeftOptionRequestDto());
-            rightOption.updateRushOption(rushEventRequestDto.getRightOptionRequestDto());
+            validateEventTimes(rushEvent, startDateTime, endDateTime, now);
+            updateRushEvent(rushEvent, rushEventRequestDto);
         }
+
 
         List<RushEvent> rushEvents = rushEventRepository.findAll();
-        List<AdminRushEventResponseDto> rushEventResponseDtoList = new ArrayList<>();
+        List<RushEventResponseDto> rushEventResponseDtoList = new ArrayList<>();
         for (RushEvent rushEvent : rushEvents) {
-            rushEventResponseDtoList.add(AdminRushEventResponseDto.of(rushEvent));
+            rushEventResponseDtoList.add(RushEventResponseDto.withDetail(rushEvent));
         }
+
         return rushEventResponseDtoList;
     }
 
+    // 이벤트 시간 유효성 검사
+    private void validateEventTimes(RushEvent rushEvent, LocalDateTime startDateTime, LocalDateTime endDateTime, LocalDateTime now) {
+        LocalDateTime curStartDateTime = rushEvent.getStartDateTime();
+        LocalDateTime curEndDateTime = rushEvent.getEndDateTime();
+
+        if (!Objects.equals(curStartDateTime, startDateTime) || !Objects.equals(curEndDateTime, endDateTime)) {
+            checkEndTimeBeforeStartTime(startDateTime, endDateTime);
+            checkEventInProgress(rushEvent, startDateTime, endDateTime, now);
+            checkEventBeforeStartTime(startDateTime, now);
+        }
+    }
+
+    // 현재 시간이 종료 시간보다 앞서는 경우
+    private void checkEndTimeBeforeStartTime(LocalDateTime startDateTime, LocalDateTime endDateTime) {
+        if (endDateTime.isBefore(startDateTime)) {
+            throw new CustomException(CustomErrorCode.EVENT_END_TIME_BEFORE_START_TIME);
+        }
+    }
+
+    // 이벤트가 현재 진행중인지 확인
+    private void checkEventInProgress(RushEvent rushEvent, LocalDateTime startDateTime, LocalDateTime endDateTime, LocalDateTime now) {
+        LocalDateTime curStartDateTime = rushEvent.getStartDateTime();
+        LocalDateTime curEndDateTime = rushEvent.getEndDateTime();
+
+        if (curStartDateTime.isBefore(now) && curEndDateTime.isAfter(now)) {
+            if (!curStartDateTime.equals(startDateTime)) {
+                throw new CustomException(CustomErrorCode.EVENT_IN_PROGRESS_CANNOT_CHANGE_START_TIME);
+            }
+            if (endDateTime.isBefore(now)) {
+                throw new CustomException(CustomErrorCode.EVENT_IN_PROGRESS_END_TIME_BEFORE_NOW);
+            }
+        }
+    }
+
+    // 이벤트가 시작 전인지 확인
+    private void checkEventBeforeStartTime(LocalDateTime startDateTime, LocalDateTime now) {
+        if (startDateTime.isBefore(now)) {
+            throw new CustomException(CustomErrorCode.EVENT_BEFORE_START_TIME);
+        }
+    }
+
+    // 선착순 이벤트 업데이트
+    private void updateRushEvent(RushEvent rushEvent, RushEventRequestDto rushEventRequestDto) {
+        RushOption leftOption = rushEvent.getLeftOption();
+        RushOption rightOption = rushEvent.getRightOption();
+
+        rushEvent.updateRushEvent(rushEventRequestDto);
+        leftOption.updateRushOption(rushEventRequestDto.getLeftOptionRequestDto());
+        rightOption.updateRushOption(rushEventRequestDto.getRightOptionRequestDto());
+    }
+
+    // 선착순 이벤트 삭제
     @Transactional
     public ResponseDto deleteRushEvent(Long rushEventId) {
         RushEvent rushEvent = rushEventRepository.findById(rushEventId).orElseThrow(() -> new CustomException(CustomErrorCode.NO_RUSH_EVENT));
@@ -452,57 +516,53 @@ public class AdminService {
         if (now.isAfter(startDateTime) && now.isBefore(endDateTime))
             throw new CustomException(CustomErrorCode.EVENT_IN_PROGRESS_CANNOT_DELETE);
         rushEventRepository.delete(rushEvent);
-        return ResponseDto.of("요청에 성공하였습니다.");
+        return new ResponseDto("요청에 성공하였습니다.");
     }
 
-    public AdminRushEventOptionResponseDto getRushEventOptions(Long rushEventId) {
-        return AdminRushEventOptionResponseDto.of(
+    // 선착순 이벤트 선택지 조회
+    public RushEventResponseDto getRushEventOptions(Long rushEventId) {
+        return RushEventResponseDto.withOptions(
                 rushEventRepository.findById(rushEventId).orElseThrow(
                         () -> new CustomException(CustomErrorCode.NO_RUSH_EVENT)
                 )
         );
     }
 
-    public LotteryEventExpectationsResponseDto getLotteryEventExpectations(int page, int size, Long participantId) {
+    // 기대평 조회
+    public ExpectationsPagingResponseDto getLotteryEventExpectations(int page, int size, Long participantId) {
         LotteryParticipants lotteryParticipant = lotteryParticipantsRepository.findById(participantId).orElseThrow(
                 () -> new CustomException(CustomErrorCode.USER_NOT_FOUND)
         );
 
 
         Pageable pageable = PageRequest.of(page, size);
-        Page<CasperBot> casperBotPage = casperBotRepository.findByPhoneNumberAndActiveExpectations(lotteryParticipant.getBaseUser().getId(), pageable);
+        Page<CasperBot> casperBotPage = casperBotRepository.findByPhoneNumberAndActiveExpectations(lotteryParticipant.getBaseUser().getPhoneNumber(), pageable);
 
         // DTO로 변환합니다.
-        List<LotteryEventExpectationResponseDto> lotteryEventExpectationResponseDtoList = casperBotPage.getContent().stream()
-                .map(casperBot -> new LotteryEventExpectationResponseDto(
-                        casperBot.getCasperId(),
-                        casperBot.getExpectation(),
-                        casperBot.getCreatedAt().toLocalDate(),
-                        casperBot.getCreatedAt().toLocalTime()
-                ))
-                .collect(Collectors.toList());
+        List<LotteryEventResponseDto> lotteryEventExpectationResponseDtoList = casperBotPage.getContent().stream()
+                .map(LotteryEventResponseDto::withExpectation).toList();
 
         // 마지막 페이지 여부 계산
         boolean isLastPage = casperBotPage.isLast();
 
         // 결과를 반환합니다.
-        return new LotteryEventExpectationsResponseDto(lotteryEventExpectationResponseDtoList, isLastPage, casperBotPage.getTotalElements());
+        return new ExpectationsPagingResponseDto(lotteryEventExpectationResponseDtoList, isLastPage, casperBotPage.getTotalElements());
     }
 
+    // 부적절한 기대평 삭제
     @Transactional
     public void deleteLotteryEventExpectation(Long casperId) {
         CasperBot casperBot = casperBotRepository.findById(casperId).orElseThrow(
                 () -> new CustomException(CustomErrorCode.CASPERBOT_NOT_FOUND)
         );
 
-        // todo: 전체 설정에서 가져오도록 변경
         final String LIST_KEY = "recentData";
 
         // 긍정적인 문구 리스트
         List<String> positiveMessages = List.of("사랑해 캐스퍼", "캐스퍼 최고!", "캐스퍼와 함께해요!", "캐스퍼 짱!", "캐스퍼는 나의 친구!");
 
         // 랜덤으로 긍정적인 문구 선택
-        String randomPositiveMessage = positiveMessages.get(new Random().nextInt(positiveMessages.size()));
+        String randomPositiveMessage = positiveMessages.get(random.nextInt(positiveMessages.size()));
 
         // isDeleted = true 로 업데이트
         casperBot.deleteExpectation();
@@ -527,8 +587,7 @@ public class AdminService {
                             );
                         }
                         return data;
-                    })
-                    .collect(Collectors.toList());
+                    }).toList();
 
             // Redis에서 현재 리스트를 삭제합니다.
             casperBotRedisTemplate.delete(LIST_KEY);
